// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: > computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          546,
          151,
        ],
        [
          556,
          154,
        ],
        [
          546,
          158,
        ],
      ],
      "headArrowPoint": [
        559,
        154,
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 412,
        "y": 126,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            416,
            143,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          374,
          154,
        ],
        [
          430,
          154,
        ],
        [
          491,
          154,
        ],
        [
          546,
          154,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "tailArrow": [
        [
          374,
          154,
        ],
        [
          368,
          150,
        ],
        [
          362,
          154,
        ],
        [
          368,
          158,
        ],
      ],
      "tailArrowPoint": [
        360,
        154,
      ],
      "target": "amazon.s3",
    },
  ],
  "height": 284,
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#bfdbfeb3",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": null,
      "position": [
        8,
        8,
      ],
      "shape": "rectangle",
      "size": {
        "height": 268,
        "width": 384,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#bfdbfeb3",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "AMAZON",
          "width": 58,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        526,
        8,
      ],
      "shape": "rectangle",
      "size": {
        "height": 268,
        "width": 384,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            123,
            97,
          ],
          "text": "Backend",
          "width": 78,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        39,
        64,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            149,
            86,
          ],
          "text": "S3",
          "width": 25,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            91,
            109,
          ],
          "text": "S3 is a storage service",
          "width": 142,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        557,
        64,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "S3",
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
  "width": 918,
}
`;

exports[`dotLayout: > computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          406,
          736,
        ],
        [
          396,
          732,
        ],
        [
          406,
          729,
        ],
      ],
      "headArrowPoint": [
        393,
        732,
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "points": [
        [
          573,
          732,
        ],
        [
          517,
          732,
        ],
        [
          462,
          732,
        ],
        [
          406,
          732,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          589,
          632,
        ],
        [
          596,
          641,
        ],
        [
          585,
          638,
        ],
      ],
      "headArrowPoint": [
        598,
        642,
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labelBBox": {
        "height": 37,
        "width": 200,
        "x": 517,
        "y": 536,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            521,
            553,
          ],
          "text": "fetches data in zero trust network",
          "width": 192,
        },
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            521,
            569,
          ],
          "text": "with sso authentification",
          "width": 139,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          417,
          492,
        ],
        [
          446,
          520,
        ],
        [
          479,
          551,
        ],
        [
          511,
          577,
        ],
        [
          535,
          597,
        ],
        [
          562,
          616,
        ],
        [
          588,
          635,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          740,
          630,
        ],
        [
          736,
          640,
        ],
        [
          733,
          629,
        ],
      ],
      "headArrowPoint": [
        736,
        643,
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBBox": {
        "height": 21,
        "width": 79,
        "x": 745,
        "y": 544,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            749,
            561,
          ],
          "text": "fetches data",
          "width": 71,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          742,
          492,
        ],
        [
          740,
          535,
        ],
        [
          738,
          586,
        ],
        [
          737,
          630,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          333,
          300,
        ],
        [
          329,
          310,
        ],
        [
          326,
          300,
        ],
      ],
      "headArrowPoint": [
        329,
        313,
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 335,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            339,
            241,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          329,
          180,
        ],
        [
          329,
          218,
        ],
        [
          329,
          261,
        ],
        [
          329,
          300,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          749,
          300,
        ],
        [
          745,
          310,
        ],
        [
          742,
          300,
        ],
      ],
      "headArrowPoint": [
        745,
        313,
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 751,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            755,
            241,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          745,
          180,
        ],
        [
          745,
          218,
        ],
        [
          745,
          261,
        ],
        [
          745,
          300,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "headArrow": [
        [
          1139,
          192,
        ],
        [
          1144,
          183,
        ],
        [
          1146,
          194,
        ],
      ],
      "headArrowPoint": [
        1145,
        180,
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 1133,
        "y": 390,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            1137,
            407,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          387,
          639,
        ],
        [
          431,
          617,
        ],
        [
          480,
          597,
        ],
        [
          527,
          585,
        ],
        [
          550,
          580,
        ],
        [
          916,
          589,
        ],
        [
          935,
          577,
        ],
        [
          1068,
          494,
        ],
        [
          1121,
          309,
        ],
        [
          1142,
          193,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "tail": "odiamond",
      "tailArrow": [
        [
          387,
          639,
        ],
        [
          379,
          638,
        ],
        [
          376,
          644,
        ],
        [
          383,
          645,
        ],
      ],
      "tailArrowPoint": [
        374,
        645,
      ],
      "target": "amazon",
    },
  ],
  "height": 896,
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "description": null,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#bfdbfeb3",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": null,
      "position": [
        8,
        257,
      ],
      "shape": "rectangle",
      "size": {
        "height": 631,
        "width": 948,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#bfdbfeb3",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "BACKEND",
          "width": 65,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud",
      "position": [
        40,
        585,
      ],
      "shape": "rectangle",
      "size": {
        "height": 271,
        "width": 884,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            107,
            78,
          ],
          "text": "Graphql API",
          "width": 109,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            37,
            101,
          ],
          "text": "Component that allows to query data via",
          "width": 250,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            131,
            118,
          ],
          "text": "GraphQL.",
          "width": 62,
        },
      ],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        571,
        642,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Graphql API",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            85,
            80,
          ],
          "text": "Backend Storage",
          "width": 154,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            33,
            103,
          ],
          "text": "The backend storage is a component that",
          "width": 258,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            125,
            120,
          ],
          "text": "stores data.",
          "width": 74,
        },
      ],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        71,
        640,
      ],
      "shape": "storage",
      "size": {
        "height": 184,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            65,
            77,
          ],
          "text": "Admin Panel Webapp",
          "width": 194,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            35,
            100,
          ],
          "text": "The admin panel is a webapp that allows",
          "width": 253,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            40,
            117,
          ],
          "text": "support staff to manage customer data.",
          "width": 244,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        168,
        313,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            32,
            77,
          ],
          "text": "Customer Dashboard Webapp",
          "width": 271,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            37,
            100,
          ],
          "text": "The customer dashboard is a webapp that",
          "width": 262,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            57,
            117,
          ],
          "text": "allows customers to view their data.",
          "width": 221,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        578,
        313,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 333,
      },
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            84,
            78,
          ],
          "text": "Support Engineer",
          "width": 156,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            44,
            101,
          ],
          "text": "Support engineers are responsible for",
          "width": 235,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            95,
            118,
          ],
          "text": "supporting customers",
          "width": 134,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        168,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            120,
            97,
          ],
          "text": "customer",
          "width": 83,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        584,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            125,
            86,
          ],
          "text": "Amazon",
          "width": 74,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            77,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 169,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        994,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1315,
}
`;

exports[`dotLayout: > computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          545,
          406,
        ],
        [
          535,
          403,
        ],
        [
          545,
          399,
        ],
      ],
      "headArrowPoint": [
        532,
        403,
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "[...]",
      "labelBBox": {
        "height": 21,
        "width": 28,
        "x": 612,
        "y": 374,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            616,
            391,
          ],
          "text": "[...]",
          "width": 20,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          713,
          403,
        ],
        [
          659,
          403,
        ],
        [
          600,
          403,
        ],
        [
          545,
          403,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          779,
          301,
        ],
        [
          784,
          311,
        ],
        [
          774,
          306,
        ],
      ],
      "headArrowPoint": [
        786,
        313,
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 728,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            732,
            241,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          657,
          180,
        ],
        [
          695,
          219,
        ],
        [
          739,
          264,
        ],
        [
          777,
          304,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          911,
          302,
        ],
        [
          904,
          310,
        ],
        [
          904,
          299,
        ],
      ],
      "headArrowPoint": [
        903,
        313,
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 939,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            943,
            241,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          950,
          180,
        ],
        [
          936,
          218,
        ],
        [
          921,
          262,
        ],
        [
          908,
          301,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          226,
          193,
        ],
        [
          223,
          183,
        ],
        [
          232,
          189,
        ],
      ],
      "headArrowPoint": [
        221,
        180,
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 273,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            277,
            241,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          304,
          301,
        ],
        [
          280,
          266,
        ],
        [
          253,
          226,
        ],
        [
          229,
          191,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "tailArrow": [
        [
          304,
          301,
        ],
        [
          304,
          309,
        ],
        [
          311,
          311,
        ],
        [
          311,
          304,
        ],
      ],
      "tailArrowPoint": [
        312,
        313,
      ],
      "target": "amazon",
    },
  ],
  "height": 533,
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#bfdbfeb3",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": null,
      "position": [
        181,
        257,
      ],
      "shape": "rectangle",
      "size": {
        "height": 268,
        "width": 883,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            120,
            96,
          ],
          "text": "Frontend",
          "width": 81,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        712,
        313,
      ],
      "shape": "browser",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            122,
            96,
          ],
          "text": "Backend",
          "width": 78,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        212,
        313,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            119,
            97,
          ],
          "text": "customer",
          "width": 83,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        410,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            83,
            78,
          ],
          "text": "Support Engineer",
          "width": 156,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            43,
            101,
          ],
          "text": "Support engineers are responsible for",
          "width": 235,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            94,
            118,
          ],
          "text": "supporting customers",
          "width": 134,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        820,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            124,
            86,
          ],
          "text": "Amazon",
          "width": 74,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            76,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 169,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1140,
}
`;

exports[`dotLayout: > computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          298,
          282,
        ],
        [
          301,
          292,
        ],
        [
          293,
          286,
        ],
      ],
      "headArrowPoint": [
        303,
        294,
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 276,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            280,
            241,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          223,
          180,
        ],
        [
          246,
          213,
        ],
        [
          272,
          250,
        ],
        [
          296,
          284,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          539,
          305,
        ],
        [
          528,
          306,
        ],
        [
          536,
          298,
        ],
      ],
      "headArrowPoint": [
        525,
        307,
      ],
      "id": "support:cloud",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 697,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            701,
            241,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          821,
          167,
        ],
        [
          734,
          209,
        ],
        [
          626,
          260,
        ],
        [
          537,
          302,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          498,
          189,
        ],
        [
          506,
          183,
        ],
        [
          504,
          193,
        ],
      ],
      "headArrowPoint": [
        508,
        180,
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 481,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            485,
            241,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          436,
          283,
        ],
        [
          457,
          253,
        ],
        [
          480,
          220,
        ],
        [
          501,
          190,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "tail": "odiamond",
      "tailArrow": [
        [
          436,
          283,
        ],
        [
          429,
          286,
        ],
        [
          429,
          293,
        ],
        [
          436,
          290,
        ],
      ],
      "tailArrowPoint": [
        428,
        294,
      ],
      "target": "amazon",
    },
  ],
  "height": 474,
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            119,
            97,
          ],
          "text": "customer",
          "width": 83,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "inEdges": [
        "support:cloud",
        "customer:cloud",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            137,
            97,
          ],
          "text": "cloud",
          "width": 48,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        205,
        294,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            83,
            78,
          ],
          "text": "Support Engineer",
          "width": 156,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            43,
            101,
          ],
          "text": "Support engineers are responsible for",
          "width": 235,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            94,
            118,
          ],
          "text": "supporting customers",
          "width": 134,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        820,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            124,
            86,
          ],
          "text": "Amazon",
          "width": 74,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            76,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 169,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        410,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "tags": null,
  "title": "",
  "width": 1140,
}
`;
